--- a/Lab4/Lab4/Views/Calcomanias/Index.cshtml
+++ b/Lab4/Lab4/Views/Calcomanias/Index.cshtml
@@ -13,7 +13,9 @@
 </p>
 <table class="table">
     <tr>
-        
+        <th>
+            @Html.DisplayNameFor(model => model.name)
+        </th>
         <th>
             @Html.DisplayNameFor(model => model.Faltantes)
         </th>
@@ -28,22 +30,25 @@
 
     @foreach (var item in Model)
     {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Faltantes)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Coleccionadas)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Cambios)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.id }) |
-                @Html.ActionLink("Details", "Details", new { id = item.id }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.id })
-            </td>
-        </tr>
+    <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.name)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Faltantes)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Coleccionadas)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Cambios)
+        </td>
+        <td>
+            @Html.ActionLink("Edit", "Edit", new { id = item.id }) |
+            @Html.ActionLink("Details", "Details", new { id = item.id }) |
+            @Html.ActionLink("Delete", "Delete", new { id = item.id })
+        </td>
+    </tr>
     }
 
 </table>
