--- a/Lab4/Lab4/Views/Calcomanias/IndexVal.cshtml
+++ b/Lab4/Lab4/Views/Calcomanias/IndexVal.cshtml
@@ -1,19 +1,23 @@
-﻿@model IEnumerable<Lab4.Models.Calcomanias>
+﻿@model IEnumerable<Lab4.Models.ValCalcomanias>
 
 @{
-    ViewBag.Title = "IndexPais";
+    ViewBag.Title = "IndexVal";
 }
 
-<h2>IndexPais</h2>
+<h2>IndexVal</h2>
 
 <p>
-    @Html.ActionLink("Upload Json File", "UploadColeccion")
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Upload Json File", "UploadColeccionVal")
+
+    @Html.ActionLink("Agregar Calcomania", "Create2")
 </p>
 <table class="table">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.name)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.valor)
         </th>
         <th></th>
     </tr>
@@ -22,6 +26,9 @@
     <tr>
         <td>
             @Html.DisplayFor(modelItem => item.name)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.SValor)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.id }) |
