--- a/Lab4/Lab4/Views/Calcomanias/CreateFaltante.cshtml
+++ b/Lab4/Lab4/Views/Calcomanias/CreateFaltante.cshtml
@@ -1,10 +1,10 @@
 ﻿@model Lab4.Models.Calcomanias
 
 @{
-    ViewBag.Title = "Create1";
+    ViewBag.Title = "CreateFaltante";
 }
 
-<h2>Create1</h2>
+<h2>CreateFaltante</h2>
 
 @using (Html.BeginForm())
 {
