--- a/Lab4/Lab4/Views/Calcomanias/Home.cshtml
+++ b/Lab4/Lab4/Views/Calcomanias/Home.cshtml
@@ -12,9 +12,9 @@
 
 <div class="row">
     <div class="col-md-4">
-        <h2>List of cards Of Countrys Or Specialsh<</h2>>
+        <h2>List of cards Of Countrys Or Specials</h2>
         <p>
-            Do you want to see a list of cards listed by Countrys Or Specialsh?
+            Do you want to see a list of cards listed by Countrys Or Special?
         </p>
         <p>@Html.ActionLink("Go", "Index", "Calcomanias")</p>
     </div>
